# L-Architecte

./: .gitignore  Makefile  NOTICE  README.md  devbox.json  pyproject.toml  pytest.ini  skaffold.yaml  squash.sh
.devcontainer/: devcontainer.json
.devpod/: devcontainer.json
.github/workflows/: ci.yml  ci_cd.yml  cicd.yml  mirror.yml
apps/: init_db.sh
apps/architect/: Dockerfile  controller.py  main.py  pyproject.toml  requirements.txt
apps/architect/agents/: analyst.py  architect.py  base.py  engineer.py  orchestrator.py  pm.py
apps/architect/agents/nodes/: analyst.py  architect.py  engineer.py  pm.py
apps/architect/api/: controller.py  observability.py
apps/architect/core/: debugger.py  observability.py  orchestrator.py  rag.py
apps/architect/dao/: db_orm.py  etl_mapper.py  llm_client.py
apps/architect/domain/: config.py  models.py  pipeline.py  ports.py
apps/architect/dto/: contracts.py  states.py
apps/architect/ingestion/: etl_mapper.py
apps/architect/ui/: layout.py
apps/ollama/: Dockerfile
docs/: doc.typ  user_guide.md
docs/architecture/: api_specs.md  architecture.md  dev_flow.md  global_archi.puml  logical_archi.puml
docs/notebook/: lab_etl_ingestion.py  lab_pm_agent.py  playground.py  playground_lab_pm_agent.py  playground_pm_agent.md  playground_pm_agent.qmd  pm_agent.py  readme.md
infra/: Ollama.Dockerfile  Pulumi.yaml  __main__.py  docker-compose.yml  k3d-deploy.sh  k3s-stack.yaml  k8s-manifests.yaml  main.tf  setup-k3d-cluster.sh  traefik-vps-config.yaml
infra/charts/the-architect/: Chart.yaml  values-vps.yaml  values.yaml
infra/charts/the-architect/templates/: k8s-manifests.yaml
infra/k3d/: config.yaml
infra/local/: docker-compose.yml  setup.sh
infra/provision/: readme.md
infra/provision/helm/ollama/templates/: deployment.yaml
infra/provision/terraform/: main.tf  variables.tf
infra/services/: Ollama.Dockerfile  docker-compose.yml
infra/vps/: docker-compose.prod.yml
libs/: code_mapper.py
scripts/: dev-bridge.sh  dev-init.sh  git-workflow.sh  install-tools.sh  release-ghcr.sh  run_dev.sh  setup-codium-api.py  setup-k3d-cluster.sh  shell-init.sh  vscode-pod-sync.sh
specs/: 01_system_intent.md  02_functional_analysis.md  02_need_analysis.puml  03_octopus_diagram.puml  system_requirements.md
specs/features/: analyst.feature  architect.feature  engineer.feature  etl_ingestion.feature  pm.feature  ui_workflow.feature
specs/functional/: readme.md  req_observability.yaml  req_ollama.yaml  req_tunnels.yaml
specs/technical/: adr_001_arangodb.md  adr_002_nemotron.md  adr_003_nicegui.md  adr_004_ovhcloud.md  adr_005_phoenix.md  adr_006_langgraph.md  adr_006_pydanticAi.md  adr_007_k3s.md  adr_008_skaffold.md
tests/: conftest.py  test_analyst.py  test_architect.py  test_debug_connection.py  test_engineer.py  test_etl_mapper.py  test_infrastructure.py  test_observability.py  test_ollama.py  test_pm_steps.py  test_ui_steps.py
