[project]
name = "agentic-architect"
version = "0.1.0"
description = "AgenticArchitect - Infrastructure as Code & AI Agents"
authors = [
    { name = "fabienfrfr", email = "fabien.furfaro@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pathspec>=1.0.3",
    "uv>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps/architect"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupytext>=1.19.1",
    "marimo>=0.19.6",
    "nest-asyncio>=1.6.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-bdd>=8.1.0",
    "pytest-dotenv>=0.5.2",
    "pytest-env>=1.2.0",
]
