[project]
name = "agentic-architect"
version = "0.1.0"
description = "AgenticArchitect - Infrastructure as Code & AI Agents"
authors = [
    { name = "fabienfrfr", email = "fabien.furfaro@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "arize-phoenix>=12.31.2",
    "debugpy>=1.8.19",
    "fastembed>=0.7.4",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.7",
    "nicegui>=3.6.1",
    "numpy>=2.4.1",
    "openinference-instrumentation-langchain>=0.1.58",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "pandas>=3.0.0",
    "pathspec>=1.0.3",
    "pydantic-settings>=2.12.0",
    "pypdfium2>=5.3.0",
    "python-arango>=8.2.6",
    "pywebview>=6.1",
    "scipy>=1.17.0",
    "uv>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps/architect"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupytext>=1.19.1",
    "marimo>=0.19.6",
    "nest-asyncio>=1.6.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-bdd>=8.1.0",
    "pytest-dotenv>=0.5.2",
    "pytest-env>=1.2.0",
]
