[project]
name = "architect"
version = "0.1.0"
description = "L'Architecte"
authors = [
    { name = "fabienfrfr", email = "fabien.furfaro@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "arize-phoenix>=12.33.1",
    "debugpy>=1.8.19",
    "fastapi>=0.128.0",
    "fastembed>=0.7.4",
    "json-repair>=0.55.2",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.7",
    "nbformat>=5.10.4",
    "networkx>=3.6.1",
    "nicegui>=3.6.1",
    "numpy>=2.4.1",
    "openinference-instrumentation-langchain>=0.1.58",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "pydantic-ai>=1.51.0",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.26.7",
    "python-arango>=8.2.6",
    "pywebview>=6.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
